# PlagueInc

./: .gitignore  CMakeLists.txt  GameTypes.h  diseasemenu.cpp  diseasemenu.h  formula.md  gamecore.cpp  gamecore.h  gameparams.h  hexnode.cpp  hexnode.h  hudpanel.cpp  hudpanel.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mapwidget.cpp  mapwidget.h  notice.cpp  notice.h  notice.txt  populationbar.cpp  populationbar.h  regions.h  regions.txt  res.qrc  skilltree.cpp  skilltree.h  soundmanager.cpp  soundmanager.h  transportation.txt  transportdata.h  worldmenu.cpp  worldmenu.h  要求.txt
graph/六边形/: 技能配置表.txt
graph/六边形/传播途径/: 传播途径.txt
graph/六边形/发病症状/: 发病症状.txt
graph/六边形/特殊能力/: 特殊能力.txt
tools/: bake_skill_assets.py
